[gd_scene load_steps=8 format=3 uid="uid://belqpbk815afk"]

[ext_resource type="Texture2D" uid="uid://cmjrn8ic765gn" path="res://Assets/Background/Background.jpg" id="1"]
[ext_resource type="Texture2D" uid="uid://bx21xml7u3m2b" path="res://Assets/Cards/Card Borders etc/Back_Texture.png" id="2"]
[ext_resource type="PackedScene" uid="uid://br6l3waa2okqa" path="res://enemy.tscn" id="2_4y8co"]
[ext_resource type="Texture2D" uid="uid://nji8drvlbn26" path="res://Assets/Cards/Card Borders etc/Gold_Border.png" id="3"]
[ext_resource type="Script" path="res://Playspace.gd" id="4"]
[ext_resource type="Script" path="res://DeckDraw.gd" id="5"]
[ext_resource type="Script" path="res://DiscardPile.gd" id="7_0ohhh"]

[node name="Playspace" type="Node2D"]
script = ExtResource("4")

[node name="CardSlots" type="Node" parent="."]

[node name="Enemies" type="Node" parent="."]

[node name="Enemy" parent="Enemies" instance=ExtResource("2_4y8co")]
visible = false

[node name="CardsInPlay" type="Node2D" parent="."]

[node name="Cards" type="Node" parent="."]

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(576.297, 321.282)
scale = Vector2(0.600732, 0.576764)
texture = ExtResource("1")

[node name="Deck" type="Node2D" parent="."]
position = Vector2(876.606, 69.9812)

[node name="DeckDraw" type="TextureButton" parent="Deck"]
offset_right = 40.0
offset_bottom = 40.0
texture_normal = ExtResource("2")
texture_pressed = ExtResource("2")
texture_hover = ExtResource("2")
texture_disabled = ExtResource("3")
script = ExtResource("5")

[node name="Discard" type="Node2D" parent="."]
position = Vector2(876.606, 300)

[node name="DiscardPile" type="TextureButton" parent="Discard"]
offset_right = 40.0
offset_bottom = 40.0
texture_normal = ExtResource("2")
texture_pressed = ExtResource("2")
texture_hover = ExtResource("2")
texture_disabled = ExtResource("3")
script = ExtResource("7_0ohhh")
